<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raisin_vicon_plugin</name>
  <version>0.0.0</version>
  <description>plugin for setting simulated state to robot</description>
  <maintainer email="kaist_jsh@kaist.ac.kr">jsh</maintainer>
  <license>RAILAB License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>raisin_interfaces</depend>
  <depend>raisin_data_logger</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>raisin_plugin</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
